# smelt-recycler

./: .env.local  .gitignore  Anchor.toml  CLAUDE.md  create-smelt-mainnet.sh  deploy-mainnet.sh  derive-keypair.mjs  instrumentation.ts  jest.config.js  jest.frontend.config.js  jest.setup.ts  next.config.js  package-lock.json  package.json  ps-test.txt  recover-keypair.sh  restart-and-test.sh  run-mocha.sh  run-test-wsl.sh  run-tests.ps1  run-tests.sh  start-with-tunnel.sh  tsconfig.jest.json  tsconfig.json  tsconfig.scripts.json  tsconfig.tsbuildinfo  wsl-check-out.txt  wsl-check.ps1
.claude/: settings.local.json
.claude-plugin/: plugin.json
.playwright-mcp/: page-2026-04-13T15-15-28-691Z.yml
app/: globals.css  layout.tsx  page.tsx  providers.tsx
components/: AppShell.tsx  MobileWalletConnect.tsx  PageHeading.tsx  PageShell.tsx  ReferralDetector.tsx  WalletConnectSheet.tsx
data/: ecosystem.json  foundry-map.json  foundry.json  leaderboard.json  referrals.json
lib/: constants.ts  donations.ts  ecosystem.ts  foundry-buildings.ts  foundry-combat.ts  foundry-constants.ts  foundry-exchange.ts  foundry-items.ts  foundry-leagues.ts  foundry-map.ts  foundry-troops.ts  foundry.ts  jupiter-swap.ts  jupiter.ts  leaderboard.ts  nft-burn.ts  paths.ts  pools.ts  recycle.ts  referrals.ts  smelt-context.tsx  smelt.ts  solana.ts  staking-pool.ts
programs/smelt_staking/: Cargo.toml
programs/smelt_staking/src/: errors.rs  lib.rs  state.rs
programs/smelt_staking/src/instructions/: initialize.rs  stake.rs  unstake.rs
public/: demo-nft-burn.html  demo-recycle.html  (+1 more)
(+125 files in other folders)
