[package]
name = "smelt-staking"
version = "0.1.0"
description = "SMELT staking program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smelt_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
